Add main layout(activity_main)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.dudwo.gyrocounter.MainActivity">
 
-    <Button
-        android:id="@+id/sign_out_button"
-        android:layout_width="194dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
-        android:layout_weight="1"
-        android:text="SignOut"
-        app:layout_constraintBottom_toTopOf="@+id/add_work"
-        tools:layout_editor_absoluteX="128dp" />
+    <RelativeLayout
+        android:layout_width="411dp"
+        android:layout_height="603dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="150.75dp"
+            android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/add_work"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Addwork"
-        tools:layout_editor_absoluteX="128dp"
-        tools:layout_editor_absoluteY="150dp" />
+            <ImageButton
+                android:id="@+id/add_work1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#ff7473"
+                android:scaleType="fitCenter"
+                app:srcCompat="@mipmap/plus" />
 
-</LinearLayout>
+            <ImageButton
+                android:id="@+id/add_work"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:background="#ff7473"
+                android:scaleType="fitCenter"
+                app:srcCompat="@mipmap/addexercise" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="150.75dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/linearLayout1"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/imageButton4"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#ffc952"
+                android:scaleType="fitCenter"
+                app:srcCompat="@mipmap/run" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150.75dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/linearLayout2"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/imageButton6"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#5f62e1"
+                android:scaleType="fitCenter"
+                app:srcCompat="@mipmap/history" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150.75dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/sign_out_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#34314c"
+                android:scaleType="fitCenter"
+                app:srcCompat="@mipmap/question" />
+
+            <ImageButton
+                android:id="@+id/sign_out_button2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:background="#34314c"
+                android:scaleType="fitCenter"
+                app:srcCompat="@mipmap/help" />
+
+        </LinearLayout>
+    </RelativeLayout>
+</android.support.constraint.ConstraintLayout>
