--- a/app/src/main/res/layout/activity_run.xml
+++ b/app/src/main/res/layout/activity_run.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.dudwo.gyrocounter.RunActivity">
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="86dp"
+        android:layout_height="50dp"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="80dp" />
 </android.support.constraint.ConstraintLayout>
