--- a/app/src/main/res/layout/activity_set_run.xml
+++ b/app/src/main/res/layout/activity_set_run.xml
@@ -60,6 +60,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
+
+            <Button
+                android:id="@+id/run_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+
         </LinearLayout>
 
     </LinearLayout>
